# accounting-parser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend.yml  container.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260505_0001_initial_schema.py  20260506_0002_auth_tables.py  20260507_0003_ingestion_tables.py  20260509_0002_auth_tables.py  20260509_0003_ingestion_metadata.py  20260509_0004_workflow_tables.py  20260510_0005_gate_events.py
backend/src/accounting_parser/: __init__.py  config.py  main.py
backend/src/accounting_parser/adjustments/: __init__.py  engine.py  library_2025.py
backend/src/accounting_parser/api/: __init__.py  app.py  deps.py
backend/src/accounting_parser/api/routes/: __init__.py  auth.py  client_portal.py  ingestion.py  observability.py  workflows.py
backend/src/accounting_parser/asc740/: __init__.py  calculator.py
backend/src/accounting_parser/auth/: __init__.py  adapter.py  audit.py  authentik.py  cognito.py  magic_link.py  memory.py  middleware.py  routes.py  service.py  session.py  state.py  webauthn.py
backend/src/accounting_parser/backup/: __init__.py  bundle.py  runner.py
backend/src/accounting_parser/classifier/: __init__.py  engine.py
backend/src/accounting_parser/compliance/: __init__.py  access_review.py  audit_export.py  data_inventory.py  wisp.py
backend/src/accounting_parser/db/: __init__.py  base.py  session.py
backend/src/accounting_parser/depreciation/: __init__.py  engine.py  tax_year_parameters.py
backend/src/accounting_parser/exporters/: __init__.py  base.py  cch_engagement.py  lacerte.py  phase2.py  quickbooks_iif.py  smoke_test.py  ultratax_advanceflow.py
backend/src/accounting_parser/ingestion/: __init__.py  errors.py  magic_bytes.py  mime.py  routes.py  scanner.py  service.py  storage.py  virus_scan.py
backend/src/accounting_parser/interchange/: __init__.py  iif.py  ofx.py  qif.py  xbrl.py
backend/src/accounting_parser/kms/: __init__.py  adapter.py  cloud_stub.py  rotation.py  software_vault.py
backend/src/accounting_parser/metering/: __init__.py  counter.py
backend/src/accounting_parser/model/: __init__.py  canonical.py  migrations.py  pretty_printer.py
backend/src/accounting_parser/observability/: __init__.py  alerting.py  logging.py  metrics.py  redact.py  redaction.py
backend/src/accounting_parser/ocr/: __init__.py  adapter.py  gate.py  self_hosted.py
backend/src/accounting_parser/parser/: __init__.py  excel_parser.py  pdf_parser.py
backend/src/accounting_parser/pbc/: __init__.py  model.py
backend/src/accounting_parser/portal/: __init__.py  pbc.py
backend/src/accounting_parser/review/: __init__.py  signoff.py
backend/src/accounting_parser/rollforward/: __init__.py  engine.py
backend/src/accounting_parser/source_detector/: __init__.py  adapters.py  detector.py
backend/src/accounting_parser/storage/: __init__.py  adapter.py  memory.py  minio.py  s3.py
backend/src/accounting_parser/validator/: __init__.py  findings.py  rules.py
backend/src/accounting_parser/workflow/: __init__.py  engine.py  registry.py  runner.py  state.py  steps.py  templates.py
backend/src/accounting_parser/wtb/: __init__.py  engine.py
backend/tests/: conftest.py  test_adjustments.py  test_asc740.py  test_audit_hash_chain.py  test_auth_signup_flow.py  test_canonical_model.py  test_classifier.py  test_depreciation.py  test_exporters.py  test_ingestion.py  test_interchange.py  test_metering.py  test_ocr.py  test_parsers.py  test_phase2_exporters.py  test_portal_obs_compliance.py  test_review_signoff.py  test_rls_tenant_isolation.py  test_rollforward.py  test_scaffolding.py  test_schema_smoke.py  test_smoke_test_adapter.py  test_source_detector.py  test_validator.py  test_workflow_engine.py  test_wtb_engine.py
backend/tests/auth/: conftest.py  test_adapter_protocol.py  test_audit_hash_chain_continues.py  test_concurrent_sessions.py  test_magic_link.py  test_middleware.py  test_session_binding.py  test_signup.py
backend/tests/backup/: __init__.py  test_bundle.py  test_runner.py
backend/tests/compliance/: __init__.py  test_access_and_inventory.py  test_audit_export.py  test_wisp.py
backend/tests/ingestion/: conftest.py  test_adapter_protocol.py  test_magic_bytes.py  test_service.py  test_upload_route.py  test_virus_scan.py
backend/tests/kms/: __init__.py  conftest.py  test_adapter_protocol.py  test_rotation.py  test_software_vault.py
backend/tests/observability/: test_alerting.py  test_logging.py  test_metrics.py  test_redaction.py
backend/tests/ocr/: __init__.py  test_adapter.py  test_gate.py
backend/tests/p2_5_parent_tasks/: __init__.py  test_exporters.py  test_pbc.py  test_templates.py
backend/tests/workflow/: __init__.py  conftest.py  test_routes.py  test_runner.py
docs/: README.md  runbook.md  tasks.md
docs/compliance/: subprocessor-disclosure.md
frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
infra/: README.md
infra/alertmanager/: alertmanager.yml
infra/prometheus/: prometheus.yml
scripts/: compose-health-check.sh
tests/: README.md
tests/fixtures/: README.md  generate_all.py  pyproject.toml  spot-check-log.md
tests/fixtures/factories/: __init__.py  _data.py  bank_statement_pdf.py  cch_engagement_xlsx.py  fixed_assets_xlsx.py  interchange.py  irs_form_pdf.py  netsuite_tb_xlsx.py  prior_year_return_pdf.py  qbd_gl_pdf.py  qbo_tb_pdf.py  rejection_samples.py  sage_intacct_tb_pdf.py  xero_tb_xlsx.py
tests/fixtures/tests/: __init__.py  test_factories.py  test_vendor_fixtures.py
tests/playwright/: package.json  playwright.config.ts  pnpm-lock.yaml  (+2 more)
(+15 files in other folders)
