[project]
name = "accounting-parser-backend"
version = "0.1.0"
description = "Accounting document parser - FastAPI backend"
authors = [
    { name = "Richard Williams", email = "rich@richscottwill.dev" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115,<1.0)",
    "uvicorn[standard] (>=0.32,<1.0)",
    "pydantic[email] (>=2.9,<3.0)",
    "pydantic-settings (>=2.6,<3.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "alembic (>=1.13,<2.0)",
    "psycopg[binary] (>=3.2,<4.0)",
    "celery[redis] (>=5.4,<6.0)",
    "redis (>=5.2,<6.0)",
    "boto3 (>=1.35,<2.0)",
    "httpx (>=0.27,<1.0)",
    "python-jose[cryptography] (>=3.3,<4.0)",
    "passlib[argon2] (>=1.7,<2.0)",
    "fido2 (>=1.1,<2.0)",
    "python-multipart (>=0.0.12,<1.0)",
    "structlog (>=24.4,<25.0)",
    "ofxparse (>=0.21,<0.22)",
    "pypdf (>=6.10.2,<7.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "email-validator (>=2.2,<3.0)",
    "clamd (>=1.0,<2.0)",
    "prometheus-client (>=0.21,<0.22)",
]

[tool.poetry]
packages = [{ include = "accounting_parser", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
hypothesis = "^6.112"
mypy = "^1.13"
ruff = "^0.7"
black = "^24.10"
isort = "^5.13"
pre-commit = "^4.0"
types-boto3 = "^1.0"
pgserver = "^0.1.4"
reportlab = "^4.5.0"
openpyxl = "^3.1.5"
pillow = "^12.2.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "C4", "SIM", "RET"]
ignore = ["S101"]  # assert allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# FastAPI routes intentionally use Depends() in argument defaults —
# this is the framework's canonical dependency-injection shape, not
# the typical Python anti-pattern B008 warns against.
"src/accounting_parser/api/routes/*" = ["B008"]
"src/accounting_parser/api/deps.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=accounting_parser --cov-report=term-missing"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:bs4",
    "ignore::DeprecationWarning:ofxparse",
]

[tool.coverage.run]
source = ["src/accounting_parser"]
branch = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
