[project]
name = "accounting-parser-fixtures"
version = "0.1.0"
description = "Synthetic accounting-document fixtures for accounting-parser tests"
authors = [{ name = "Richard Williams" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "reportlab (>=4.2,<5.0)",
    "openpyxl (>=3.1,<4.0)",
    "pypdf (>=5.1,<6.0)",
    "cryptography (>=44.0,<46.0)",
    "Pillow (>=11.0,<12.0)",
]

[tool.poetry]
packages = [{ include = "factories" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.7"
black = "^24.10"
ofxparse = "^0.21"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
